[project]
authors = [{name = "Adugna Mullissa", email = ""}]
dependencies = []
name = "gee_s1_ard"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["python-api/src/gee_s1_ard"]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
gee_s1_ard = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
earthengine-api = ">=1.7.0,<2"
